--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,12 +21,14 @@ a{
 body{
   font-family: 'Epilogue', sans-serif;
   font-size: 18px;
+  background-color: var(--almost-white);
 }
 
 /*======Layout======*/
 .container{
   width: 100%;
   max-width: 1200px;
+  margin: 0 auto;
 }
 
 .row{
@@ -36,3 +38,217 @@ body{
 
 
 /*======Header======*/
+header nav {
+  padding: 15px;
+}
+
+#menu{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+#btn_menu-open{
+  width: 40px;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+#backdrop{
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.669);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: none;
+  z-index: 1;
+}
+.open-dropdown{
+  display: block !important;
+}
+#nav{
+  z-index: 9999;
+  width: 250px;
+  height: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 15px;
+  padding-bottom: 80px;
+  background-color: #fff;
+  display: none;
+  transition: all 300ms ease-in-out;
+  border-bottom-left-radius: 10px;
+
+}
+.menu_close{
+  display: block !important;
+  transition: all 300ms ease-in-out;
+  cursor: pointer;
+}
+#btn_menu-close{
+  background: none;
+  border: none;
+  cursor: pointer;
+  margin-left: 190px;
+}
+#features{
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+#company{
+  width: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#nav ul li{
+  margin: 20px 0px;
+}
+#nav a{
+  color: black;
+}
+.dropdown{
+  padding-left: 20px;
+}
+
+.dropdown ul li{
+  margin: 20px 0;
+}
+.dropdown_features{
+  display: none;
+}
+.dropdown_company{
+  display: none;
+}
+
+.dropdown_close{
+  display: block;
+}
+
+.arrowF{
+  transition: all 300ms ease-in-out;
+}
+.arrowC{
+  transition: all 300ms ease-in-out;
+}
+
+.arrow_features{
+  transform: rotate(180deg);
+  transition: all 300ms ease-in-out;
+}
+.arrow_company{
+  transform: rotate(180deg);
+  transition: all 300ms ease-in-out;
+}
+
+#authentication{
+  display: flex;
+  flex-direction: column;
+  height: 30px;
+  justify-content: space-between;
+}
+#authentication a{
+  text-align: center;
+  padding: 10px 35px;
+}
+#authentication a:last-child{
+  border: 2px solid var(--almost-black);
+  border-radius: 10px;
+}
+
+
+
+
+
+
+
+
+/* Dispositivos médios (tablets com 768px ou mais)*/
+@media (min-width: 768px) {
+  header nav {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    align-content: flex-start;
+  }
+  #btn_menu-open{
+    display: none;
+  }
+  #btn_menu-close{
+    display: none;
+  }
+  #backdrop{
+    display: none;
+  }
+  #menu{
+    width: auto;
+  }
+  #nav{
+    display: flex !important;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    position: static;
+    background: transparent;
+    padding: 0px;
+    margin-left: 50px;
+  }
+  #nav ul{
+    width: auto;
+    padding: 0 25p;
+    display: flex;
+    align-items: flex-start;
+  }
+  #nav ul li{
+    margin: 0px 10px;
+  }
+  .dropdown{
+    padding: 15px;
+    padding-left: 0px;
+    background-color: #fff;
+    border-radius: 10px;
+  }
+  .dropdown_features{
+    position: relative;
+    top: 15px;
+    left: -40px;
+  }
+  .dropdown_company{
+    position: relative;
+    top: 15px;
+    left: 0;
+  }
+
+  .dropdown_close{
+    display: flex;
+    padding-right: 0px;
+    margin-right: -40px;
+  }
+  .dropdown ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
+  .dropdown ul li{
+    margin: 15px !important;
+  }
+  #authentication{
+    flex-direction: row;
+    align-content: center;
+    align-items: center;
+    justify-content: space-between;
+    align-self: baseline;
+  }
+  #authentication a:last-child{
+    padding: 5px 15px;
+  }
+  
+}
